Temporarily disable try-it-out for non-GET endpoints.
- Also hides parameters for non-GET endpoints.

--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -40,51 +40,48 @@
             <form accept-charset="UTF-8" class="sandbox">
 
                 {{#if endpoint}}
-
-                    {{#if parameters}}
-                        <h4 data-control data-parm-toggle data-toggle="collapse"
-                            data-target="#parm-{{parentId}}_{{nickname}}">
-                            Parameters
-                        </h4>
-                        <div data-content class="operation-params collapse in" id="parm-{{parentId}}_{{nickname}}"/>
-                    {{/if}}
-
-{{!--                     <h4 data-control data-toggle="collapse" data-target="#test-{{parentId}}_{{nickname}}">
-                        Test this endpoint
-                    </h4>
- --}}
-                    <div id="test-{{parentId}}_{{nickname}}">
-                        <div class="sandbox_header collapse in" data-content>
-                            <input class="submit btn btn-primary" name="commit" type="submit" value="try"
-                                   data-target="#get_clients-modal-request">
-                            <a href="#" class="response_hider hide" style="display: inline;">Hide Response</a>
-                            <!--small class="curl-copy-message hide" style="display:none;">Copied to clipboard</small-->
-                            <!--span class="response_throbber hide" style="display: none;"></span-->
-
-                            {{#oauth}}
-                            <div class="auth">
-                            {{/oauth}}
-
-                            {{#each oauth}}
-                                <div id="api_information_panel" style="top: 526px; left: 776px; display: none;">
-                                    {{#each this}}
-                                        <div title='{{{this.description}}}'>{{this.scope}}</div>
-                                    {{/each}}
-                                </div>
-                            {{/each}}
-
-                            {{#oauth}}
-                                <button type="button" class="api-ic ic-off btn btn-default pull-right">Oauth</button>
-                            </div>
-                            {{/oauth}}
-
-                        </div>
-
-                        {{#if type}}
-                            <div class="response-content-type"/>
+                    {{#if read}}
+                        {{#if parameters}}
+                            <h4 data-control data-parm-toggle data-toggle="collapse"
+                                data-target="#parm-{{parentId}}_{{nickname}}">
+                                Parameters
+                            </h4>
+                            <div data-content class="operation-params collapse in" id="parm-{{parentId}}_{{nickname}}"/>
                         {{/if}}
 
-                    </div>
+                        <div id="test-{{parentId}}_{{nickname}}">
+                            <div class="sandbox_header collapse in" data-content>
+                                <input class="submit btn btn-primary" name="commit" type="submit" value="try"
+                                       data-target="#get_clients-modal-request">
+                                <a href="#" class="response_hider hide" style="display: inline;">Hide Response</a>
+                                <!--small class="curl-copy-message hide" style="display:none;">Copied to clipboard</small-->
+                                <!--span class="response_throbber hide" style="display: none;"></span-->
+
+                                {{#oauth}}
+                                <div class="auth">
+                                {{/oauth}}
+
+                                {{#each oauth}}
+                                    <div id="api_information_panel" style="top: 526px; left: 776px; display: none;">
+                                        {{#each this}}
+                                            <div title='{{{this.description}}}'>{{this.scope}}</div>
+                                        {{/each}}
+                                    </div>
+                                {{/each}}
+
+                                {{#oauth}}
+                                    <button type="button" class="api-ic ic-off btn btn-default pull-right">Oauth</button>
+                                </div>
+                                {{/oauth}}
+
+                            </div>
+
+                            {{#if type}}
+                                <div class="response-content-type"/>
+                            {{/if}}
+
+                        </div>
+                    {{/if}}
 
 {{!--                     {{#if responseMessages}}
                         <div style="margin:0;padding:0;display:inline"></div>
