--- a/src/main/template/signature.handlebars
+++ b/src/main/template/signature.handlebars
@@ -1,6 +1,8 @@
 {{#if signature}}
-    <h4 class="schema-title collapsed" data-control data-toggle="collapse"
-        data-target="#schema-{{id}}">{{schemaName}} Object</h4>
+    <h4 class="schema-title collapsed" data-control data-toggle="collapse" data-target="#schema-{{id}}">
+        <span class="glyphicon glyphicon-menu-right"></span>
+        {{schemaName}} Object
+    </h4>
     <div data-content class="collapse" id="schema-{{id}}">
         <div class="description">
             {{{signature}}}
@@ -8,8 +10,10 @@
     </div>
 {{/if}}
 
-<h4 class="sample-title collapsed" data-control data-toggle="collapse"
-    data-target="#sample-{{id}}">Example {{type}}</h4>
+<h4 class="sample-title collapsed" data-control data-toggle="collapse" data-target="#sample-{{id}}">
+    <span class="glyphicon glyphicon-menu-right"></span>
+    Example {{type}}
+</h4>
 <div data-content class="collapse" id="sample-{{id}}">
     <div class="snippet">
         <pre><code>{{sampleJSON}}</code></pre>
