Modify CSS to fix icon on all glyphicons

--- a/src/main/html/css/api-explorer.css
+++ b/src/main/html/css/api-explorer.css
@@ -2473,10 +2473,13 @@ body {
     float:left;
     margin-left: -15px;
     padding-top: 10px;
-    padding-right: 5px;
     color: lightblue;
 }
 
 .glyphicon-link:hover {
     color: #44c7f4;
+}
+
+.glyphicon {
+    padding-right: 5px;
 }
