--- a/src/main/html/css/api-explorer.css
+++ b/src/main/html/css/api-explorer.css
@@ -1383,19 +1383,10 @@
     background: none !important
 }
 
-.changes-disclaimer {
-    display: none;
-    border: 1px solid #dddde2;
-    border-radius: 3px;
-    padding: 15px;
+.swagger-section .changes-disclaimer {
     margin: 20px 20px 20px;
     line-height: 1.4;
-    background: #ebebee;
     font-size: 13px
-}
-
-.changes-disclaimer p {
-    margin: 0px;
 }
 
 @media (min-width: 992px) {
