anchor_link > anchor-link

--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -3,7 +3,7 @@
         <div class='content'>
             <div class='heading'>
                 <div>
-                    <a href='#{{parentId}}_{{nickname}}' class="anchor_link">
+                    <a href='#{{parentId}}_{{nickname}}' class="anchor-link">
                         <span class="glyphicon glyphicon-link"></span>
                     </a>
                     <h2 class='operation-title'>{{summary}}</h2>
