--- a/src/main/html/css/api-explorer.css
+++ b/src/main/html/css/api-explorer.css
@@ -2469,17 +2469,17 @@ body {
     padding-top: 10px
 }
 
-.glyphicon-link {
-    float:left;
-    margin-left: -15px;
-    padding-top: 10px;
-    color: lightblue;
-}
-
 .glyphicon-link:hover {
     color: #44c7f4;
 }
 
 .glyphicon {
     padding-right: 5px;
+}
+
+.anchor-link {
+    float:left;
+    margin-left: -15px;
+    padding-top: 10px;
+    color: lightblue;
 }
