Add API token header auth for interactive use of the API!
- Update swagger.yaml to include API header auth
- Also include a link to where to set your token
- Template updates to show auth info where appropriate
- Clear and reset the token from the sidebar
- CSS and style updates
- helper function to compare the type of request and if you have a key
or not

future improvements:
- simply disable the "TRY" button with no key, don't hide the form
entirely

--- a/src/main/html/css/api-explorer.css
+++ b/src/main/html/css/api-explorer.css
@@ -2474,3 +2474,45 @@ body {
     padding-top: 10px;
     color: lightblue;
 }
+
+.auth-container {
+    margin: 20px 20px 20px;
+}
+
+.auth_input {
+    margin-top: 6px;
+    padding-top: 6px;
+    padding-bottom: 7px;
+    padding-left: 12px;
+    font-family: inherit;
+
+}
+
+.token-indicator {
+    font-size: smaller;
+    margin-top: 5px;
+    font-style: italic;
+    font-family: inherit;
+}
+
+.osf-token-info {
+    font-size: smaller;
+    margin-top: 5px;
+    font-style: italic;
+    font-family: inherit;
+}
+
+.try-hide {
+    font-family: inherit;
+    font-size: inherit;
+    font-color: inherit;
+}
+
+.put-post-patch-info {
+    background-color: #d9edf7;
+}
+
+#clear-token-link {
+    padding-left: 57px;
+    cursor: pointer;
+}
