--- a/src/main/template/main.handlebars
+++ b/src/main/template/main.handlebars
@@ -5,6 +5,13 @@
                 <a href="https://api.osf.io"><img src="images/osf-logo.png" width="27"/> OSF API</a>
             </div>
 
+            <div class="auth-container">
+                <div class="auth_main_container">
+                </div>
+                <div>
+                    <a class="osf-token-info" href="{{info.x-token-settings}}">Get an API Token</a>
+                </div>
+            </div>
             <div class="mobile-nav">
                 <span class="select-label">API Reference: </span><span data-selected-value></span>
             </div>
