--- a/src/main/template/apikey_button_view.handlebars
+++ b/src/main/template/apikey_button_view.handlebars
@@ -1,11 +1,11 @@
 <div class='auth_button' id='apikey_button'>
-    <!--img class='auth_icon' alt='apply api key' src='images/apikey.jpeg'-->
+    <span id="apikey_menu_icon" class="glyphicon glyphicon-menu-down"></span>API Authorization
 </div>
 <div class='auth_container' id='apikey_container'>
   <div class='key_input_container'>
     <div class='auth_label'>{{keyName}}</div>
-    <input placeholder="api_key" class="auth_input" id="input_apiKey_entry" name="apiKey" type="text"/>
-    <div class='auth_submit'><a class='auth_submit_button' id="apply_api_key" href="#">apply</a></div>
+    <input placeholder="enter api token" class="auth_input" id="input_apiKey_entry" name="apiKey" type="password"/>
+    <button class='btn btn-default' id="apply_api_key"><span class="glyphicon glyphicon-arrow-right"></span></button>
   </div>
+    <div class="token-indicator hidden">Token updated<a id="clear-token-link">clear</a></div>
 </div>
-
