--- a/src/main/html/css/api-explorer.css
+++ b/src/main/html/css/api-explorer.css
@@ -525,7 +525,8 @@
 
 .swagger-section .operations .model-signature .description .propOptKey {
     opacity: .7;
-    display: block
+    display: table-cell;
+    padding-left: 10px;
 }
 
 @media (min-width: 992px) {
@@ -549,9 +550,15 @@
     }
 }
 
+.swagger-section .operations .model-signature .description .propLabels {
+    text-align: right;
+    display: block;
+    width: 40%;
+    width: calc(200px);
+}
+
 @media (min-width: 992px) {
     .swagger-section .operations .model-signature .description .propLabels {
-        text-align: right;
         text-align: right;
         display: block;
         width: 40%;
@@ -1100,14 +1107,16 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 600
+    z-index: 600;
+    background: white;
 }
 
 @media (min-width: 992px) {
     .swagger-section .sticky-nav.fixed {
         width: 290px;
         height: 100%;
-        overflow-y: auto
+        overflow-y: auto;
+        background: #f8f8f9;
     }
 }
 
@@ -1124,7 +1133,6 @@
     overflow-x: hidden;
     background: #4e575e;
     box-shadow: inset 0 2px 10px 0 rgba(0, 0, 0, .4);
-    position: absolute;
     top: 43px;
     width: 100%;
     z-index: 500
@@ -1193,10 +1201,8 @@
     }
 }
 
-@media (min-width: 992px) {
-    .swagger-section .sticky-nav [data-navigator] [label=Tools] {
-        display: none
-    }
+.swagger-section .sticky-nav [data-navigator] [label=Tools] {
+    display: none
 }
 
 .swagger-section .sticky-nav [data-navigator] .item {
@@ -1299,12 +1305,12 @@
 
 .swagger-section .sticky-nav.nav-open [data-navigator] {
     height: 180px;
-    height: 100vh
+    height: 100vh;
 }
 
 @media (min-width: 992px) {
     .swagger-section .sticky-nav.nav-open [data-navigator] {
-        height: auto
+        height: auto;
     }
 }
 
@@ -1384,14 +1390,15 @@
 }
 
 .swagger-section .changes-disclaimer {
-    margin: 20px 20px 20px;
-    line-height: 1.4;
-    font-size: 13px
+    display: none;
 }
 
 @media (min-width: 992px) {
-    .changes-disclaimer {
-        display: block
+    .swagger-section .changes-disclaimer {
+        display: block;
+        margin: 20px 20px 20px;
+        line-height: 1.4;
+        font-size: 13px;
     }
 }
 
